--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/hnet.com-image.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862103743">
 
-  <title>John Doe - Business Administration</title>
+  <title>Mark Hanin - Biology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Mark Hanin</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/markhanin.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Mark Hanin
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Biology📚</div>
+        <p class="lead mb-4">My name is Mark Hanin and I am currently an undergraduate student at the University of California, Riverside (UCR). I am interested in health law, public health advocacy, and engaging communities to understand how healthcare policies can sometimes place people at a disadvantage.<br><br>
 
-        Enter bio here<br><br>
+        As an undergraduate, I have been actively working to making sure that I raise awareness of the importance of health and health resources as part of my campaign of promoting health literacy among community members. I have have taken constructive steps to achieve this goal through the creation of my own webinar series as well as through my involvement with some of the Pipeline Programs at UCR's School of Medicine.<br><br>
 
-        Enter bio here
+        Aside from my work towards promoting health literacy among local communities, I am a part of many communities on my college campus. I am a part of the University Honors Program at my university, where I serve as a University Honors Ambassador. I am also a part of my student government, where I am the Vice-Chair of the Student Voice Committee, the only non-political committee within our university's Student Government.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://www.linkedin.com/in/mark-hanin-5b2470175/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/MarkHanin">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/MarkHanin">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:mhani003@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,70 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Vice-Chair of Student Voice</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://asucr.ucr.edu/leadership/voice#director">Associated Students of UCR</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Responsible for recruitment and management of the application process to select future delegates for Student Voice.<br> 
+              • Responsible for recording and disseminating the committee meeting minutes.<br>
+              • Represent Student Voice to UCR students, ASUCR officials, and campus administration.<br>
+              • Preside over committee meetings and directly address the Senate on what actions to take when necessary to improve student life on campus using the responses of students on campus through the surveys that the committee creates.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Autism Awareness Project Group</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mms.ucr.edu/">Mini Medical School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • A Pipeline Program for the UCR School of Medicine, Mini Medical School serves to provide the residents of the Inland Empire in Southern California with professionally approved medical and health-related information to help combat health disparities within the region.<br>
+              • Responsible for researching the Pervasive Developmental Disorders (PDD) as well as the Autism Spectrum Disorders (ASD).<br>
+              • Help create and develop how the group will present our findings to the community in meaningful and engaging ways.<br>
+              • Coordinated presentations at community events and local schools throughout the Inland Empire with the goal of educating the community and advocating for resources.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">October 2019 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">University Honors Ambassador</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://honors.ucr.edu/current-students/leadership/honors-ambassadors">University Honors</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Responsible for representing University Honors both on and off campus.<br>
+            • Hold office hours on a weekly basis to provide students with one-on-one mentoring regardless of Honors status.<br>
+            • Responsible for planning and coordinating community building events throughout the year to members of the Honors community and to the larger UCR community.<br>
+            • Responsible for personally hosting and organizing “Real Talk” discussions on relevant issues that students get to face on campus.<br>
+            • Assist in planning and coordinating all major events and activities that are sponsored by University Honors such as the Alumni Mixer, Faculty Mixer, University Honors Cording Ceremony among other events.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">May 2019 - Present</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">Loma Linda Summer Gateway Program Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://caps.llu.edu/community-programs/discovery-program-inspiring-health-professionals-tomorrow">Loma Linda University Health</a></div>
+            <p>
+            • Engage in an interactive and collaborative learning program directed towards underrepresented minority High School Students on the different careers in the health field.<br>
+            • Examine careers in Allied Health, Behavioral Health, Dentistry, Medicine, among others.<br>
+            • Participate in workshops and team-building activities to further my understanding on the different health careers out there.<br>
+            • Build a constructive network of peers to help guide one another during the program.<br>
+
+          </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2017 - July 2017</span>
           </div>
         </div>
 
@@ -152,33 +174,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Biology</div>
+            <div>B.S. in Biology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2018 - Present</span>
           </div>
         </div>
 
@@ -191,7 +191,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
+            <img src="img/image3.jpeg" width="500px">
+            <img src="img/image4.jpeg" width="500px"><br>
+            <img src="img/image5.jpeg" width="500px">
+            <img src="img/image6.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +204,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Mark Hanin </center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
