--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/hnet.com-image.ico">
-  <meta name="description" content="YourDescriptionHere">
+  <meta name="description" content="My Website">
   <meta name="author" content="862103743">
 
   <title>Mark Hanin - Biology</title>
